# vartrace

./: .gitignore  .hgignore  .hgtags  .projectile  CMakeLists.txt  README.md  README.org  annotated.html  classPolicyTest-members.html  classPolicyTest.html  classSelfLogClass-members.html  classSelfLogClass.html  classSelfLogTemplateClass-members.html  classSelfLogTemplateClass.html  classValueCreationTest-members.html  classValueCreationTest.html  classes.html  classvartrace_1_1Message-members.html  classvartrace_1_1Message.html  classvartrace_1_1ParsedVartrace-members.html  classvartrace_1_1ParsedVartrace.html  classvartrace_1_1SingleThreaded_1_1Lock-members.html  classvartrace_1_1SingleThreaded_1_1Lock.html  classvartrace_1_1VarTrace-members.html  classvartrace_1_1VarTrace.html  copytraits_8h.html  copytraits_8h_source.html  creation__policy__test_8cc.html  datatraits_8h.html  datatraits_8h_source.html  datatypeid_8h.html  datatypeid_8h_source.html  dir_18c256fc6063b8279e84ccda1ebf1b82.html  dir_4e3a55e2a9734425e24eb78aa4793941.html  dir_8f2224f82a10e656ac8947d56948e470.html  dir_916507c20737a70441aaf4f44c3fca94.html  dir_9e041eeef66170b1836127dc207db4b3.html  dir_feae4950b8e1ef607fb55acce4fcd863.html  files.html  functions.html  (+138 more)
doc/: CMakeLists.txt  Doxyfile.in
trunk/: CMakeLists.txt  vartrace_config.h.in
trunk/include/vartrace/: .#vartrace.h  config.h  copytraits.h  creation_policies.h  datatraits.h  datatypeid.h  log_level.h  messageparser.h  policies.h  simplestack.h  tracetypes.h  type_codes.h  utility.h  vartrace-impl.h  vartrace-inl.h  vartrace-internal.h  vartrace.h  vartrace_c.h
trunk/src/: CMakeLists.txt
trunk/src/parser/: CMakeLists.txt
trunk/src/vartrace/: CMakeLists.txt  log_level.cc  messageparser.cc  messageparser.cpp  utility.cc  vartrace-internal.cc  vartrace.cc  vartrace.cpp  vartrace_c.cpp
trunk/tests/: CMakeLists.txt  containers_test.cc  creation_policy_test.cc  customfun_test.cc  generator.cc  level_test.cc  policy_test.cc  profile.cc  profile_char.cc  profile_double.cc  profile_int.cc  profile_subtrace.cc  profile_utils.h  selflog_test.cc  simplestack_test.cpp  subtrace_test.cc  types_test.cc  utils_test.cc  vartrace_c_test.c  vartrace_test.cc  vartrace_test.cpp
